testdata/baselines/reference/submodule/conformance/globalThisVarDeclaration.errors.txt
error TS5055: Cannot write file 'b.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
actual.ts(12,5): error TS2339: Property 'a' does not exist on type 'Window'.
actual.ts(13,5): error TS2339: Property 'b' does not exist on type 'Window'.
b.js(12,5): error TS2339: Property 'a' does not exist on type 'Window'.
b.js(13,5): error TS2339: Property 'b' does not exist on type 'Window'.


!!! error TS5055: Cannot write file 'b.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== b.js (2 errors) ====
    var a = 10;
    this.a;
    this.b;
    globalThis.a;
    globalThis.b;
    
    // DOM access is not supported until the index signature is handled more strictly
    self.a;
    self.b;
    window.a;
    window.b;
    top.a;
        ~
!!! error TS2339: Property 'a' does not exist on type 'Window'.
    top.b;
        ~
!!! error TS2339: Property 'b' does not exist on type 'Window'.
    
==== actual.ts (2 errors) ====
    var b = 10;
    this.a;
    this.b;
    globalThis.a;
    globalThis.b;
    
    // same here -- no DOM access to globalThis yet
    self.a;
    self.b;
    window.a;
    window.b;
    top.a;
        ~
!!! error TS2339: Property 'a' does not exist on type 'Window'.
    top.b;
        ~
!!! error TS2339: Property 'b' does not exist on type 'Window'.
    
    